recipes/prometheus-community/prometheus/29.9.0/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# prometheus-community/prometheus 29.9.0 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | prometheus-community/prometheus@29.9.0 |
| Catalog status | catalog-candidate |
| Support level | promotion-review-needed |
| Supported scopes | none |
| Production readiness | not-reviewed-for-production |
| Supported variants | none |
| Candidate variants | default, server-only-ephemeral |
| Control points | bundle-dependencies, capability-profile, cluster-rbac, component-selection, dependency-lock, extension-slots, installer-support-object, monitoring-workloads, scrape-config, source-lock, storage-retention |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | - |
| User status | - |
| Strongest evidence | - |
| Proof lanes | render parity 2/2; ConfigHub 2/2; local live 2/2; GitOps live 1/2; live parity 1/2 |
| Feature summary | none-recorded |
| Hard gap | - |
| Next action | - |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/prometheus-community/prometheus/29.9.0/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/prometheus-community/prometheus/29.9.0/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/prometheus-community/prometheus/29.9.0/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/prometheus-community/prometheus/29.9.0/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/prometheus-community/prometheus/29.9.0/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/prometheus-community/prometheus/29.9.0/control-points.yaml](control-points.yaml) |
| Value model | [recipes/prometheus-community/prometheus/29.9.0/value-model.yaml](value-model.yaml) |
| GitOps runtime review | [recipes/prometheus-community/prometheus/29.9.0/gitops-runtime-review.yaml](gitops-runtime-review.yaml) |
| Catalog status | [recipes/prometheus-community/prometheus/29.9.0/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/prometheus-community/prometheus/29.9.0/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/prometheus-community-prometheus:29.9.0@sha256:0be296fd83670ed5469a2ef2abca19cb515546daf7bcb262f6d0142f9269310c` |
| Installer package source | [packages/prometheus-community/prometheus/29.9.0](../../../../packages/prometheus-community/prometheus/29.9.0) |
| Installer package receipt | [recipes/prometheus-community/prometheus/29.9.0/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/prometheus-community/prometheus/29.9.0/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| default | [recipes/prometheus-community/prometheus/29.9.0/variants/default/variant.yaml](variants/default/variant.yaml) | [packages/prometheus-community/prometheus/29.9.0/bases/default](../../../../packages/prometheus-community/prometheus/29.9.0/bases/default) | [recipes/prometheus-community/prometheus/29.9.0/revisions/default/r001/variant-revision.yaml](revisions/default/r001/variant-revision.yaml) | 23 | 24 | 23/23 | pass | warn | warn | none |
| server-only-ephemeral | [recipes/prometheus-community/prometheus/29.9.0/variants/server-only-ephemeral/variant.yaml](variants/server-only-ephemeral/variant.yaml) | [packages/prometheus-community/prometheus/29.9.0/bases/server-only-ephemeral](../../../../packages/prometheus-community/prometheus/29.9.0/bases/server-only-ephemeral) | [recipes/prometheus-community/prometheus/29.9.0/revisions/server-only-ephemeral/r001/variant-revision.yaml](revisions/server-only-ephemeral/r001/variant-revision.yaml) | 6 | 7 | 6/6 | pass | warn | warn | none |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| default | [packages/prometheus-community/prometheus/29.9.0/bases/default](../../../../packages/prometheus-community/prometheus/29.9.0/bases/default) | yes | prometheus default monitoring stack variant rendered from prometheus-community/prometheus@29.9.0 |
| server-only-ephemeral | [packages/prometheus-community/prometheus/29.9.0/bases/server-only-ephemeral](../../../../packages/prometheus-community/prometheus/29.9.0/bases/server-only-ephemeral) | no | prometheus server only without persistence variant rendered from prometheus-community/prometheus@29.9.0 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| default | r001 | render | RenderReceipt | recorded | [recipes/prometheus-community/prometheus/29.9.0/revisions/default/r001/receipts/render-receipt.yaml](revisions/default/r001/receipts/render-receipt.yaml) |
| default | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/prometheus-community/prometheus/29.9.0/revisions/default/r001/receipts/helm-equivalence-receipt.yaml](revisions/default/r001/receipts/helm-equivalence-receipt.yaml) |
| default | r001 | scan | ScanReceipt | warn | [recipes/prometheus-community/prometheus/29.9.0/revisions/default/r001/receipts/scan-receipt.yaml](revisions/default/r001/receipts/scan-receipt.yaml) |
| default | r001 | installGate | InstallGate | warn | [recipes/prometheus-community/prometheus/29.9.0/revisions/default/r001/receipts/install-gate.yaml](revisions/default/r001/receipts/install-gate.yaml) |
| server-only-ephemeral | r001 | render | RenderReceipt | recorded | [recipes/prometheus-community/prometheus/29.9.0/revisions/server-only-ephemeral/r001/receipts/render-receipt.yaml](revisions/server-only-ephemeral/r001/receipts/render-receipt.yaml) |
| server-only-ephemeral | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/prometheus-community/prometheus/29.9.0/revisions/server-only-ephemeral/r001/receipts/helm-equivalence-receipt.yaml](revisions/server-only-ephemeral/r001/receipts/helm-equivalence-receipt.yaml) |
| server-only-ephemeral | r001 | scan | ScanReceipt | warn | [recipes/prometheus-community/prometheus/29.9.0/revisions/server-only-ephemeral/r001/receipts/scan-receipt.yaml](revisions/server-only-ephemeral/r001/receipts/scan-receipt.yaml) |
| server-only-ephemeral | r001 | installGate | InstallGate | warn | [recipes/prometheus-community/prometheus/29.9.0/revisions/server-only-ephemeral/r001/receipts/install-gate.yaml](revisions/server-only-ephemeral/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/prometheus-community-prometheus:29.9.0@sha256:0be296fd83670ed5469a2ef2abca19cb515546daf7bcb262f6d0142f9269310c --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
